# packer_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  DIALOG.txt  PLAN_GEMINI.md  config.json  cutting_result.json  cutting_result_task_1_2025-07-03_18-37-44.json  cutting_result_task_1_2025-07-03_18-37-50.json  visualize.py  детали.txt
src/: config.json  main.rs  main_copy.rs  main_ok.rs  main_ok_1.rs  main_ok_2.rs  main_ok_3.rs
webapp/: app.py
webapp/templates/: index.html
