[package]
name = "guillotine_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4.41"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"