[package]
name = "guillotine_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Сериализация JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Аргументы командной строки
clap = { version = "4.4", features = ["derive"] }

# Многопоточность
rayon = "1.8"

# Случайные числа (ВАЖНО: используем стабильную 0.8.5)
rand = "0.8.5"
